update build to version 2.1.3, enable hardening flags remove configure extra lines from rules (needs cdbs) remove manpage fixes from patch that have been included upstream fix typo in copyright, bump version in config to 2.1.3 remove dynamic provisioning via ctrl (broken) does not build with pie flag update changelog to mention hardening

--- a/debian/rules
+++ b/debian/rules
@@ -3,12 +3,10 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-#DEB_CONFIGURE_EXTRA_FLAGS :=     \
-#	--enable-rrl	\
-#	--enable-nsid	\
-#	--enable-tools	\
-#	--enable-ctrl	\
-#	--enable-ctrl-dynamic-provisioning
+DEB_BUILD_MAINT_OPTIONS = hardening=+all,-pie
+DEB_CFLAGS_MAINT_APPEND = -Wall -Wextra
+DPKG_EXPORT_BUILDFLAGS = 1
+-include /usr/share/dpkg/buildflags.mk
 
 %:
 	dh $@  --with autoreconf --with=systemd
@@ -22,8 +20,7 @@ override_dh_auto_configure:
 		--enable-rrl	\
 		--enable-nsid	\
 		--enable-tools	\
-		--enable-ctrl	\
-		--enable-ctrl-dynamic-provisioning
+		--enable-ctrl
 
 override_dh_installinit:
 	dh_installinit -a --no-start
