--- a/debian/yadifad.conf
+++ b/debian/yadifad.conf
@@ -13,7 +13,7 @@
         logpath                     "/var/log/yadifa"
 
         # The location of the pid file
-        pidfile                     "/var/run/yadifa/yadifad.pid"
+        pidfile                     "/run/yadifa/yadifad.pid"
 
         # The path where all zone files will be written
         datapath                    "/var/lib/yadifa"
@@ -32,7 +32,7 @@
         # serverid                   "yadifad-01"
 
         # The version returned by a query to version.yadifa. CH TXT
-        # version                   "2.1.3"
+        # version                   "2.2.0"
 
         # Set the maximum UDP packet size. Cannot be less than 512. Cannot be
         # more than 65535.  Typical choice is 4096.
@@ -65,7 +65,7 @@
 
         # Maximum number of records in an AXFR packet.  Set to 1 for compatibility
         # with very old name servers
-        axfr-maxrecordbypacket    0
+        # axfr-maxrecordbypacket    0
 
         # Global Access Control List rules.
         #
@@ -85,7 +85,7 @@
 
         # If YADIFA has the controller enabled, allow control only for these
         # clients (none by default)
-        allow-control               localhost
+        allow-control               controller
 </main>
 
 # If YADIFA has NSID support (default)
@@ -192,11 +192,7 @@
 # TSIG Key configuration
 #
 
-#<key>
-#        name        abroad-admin-key
-#        algorithm   hmac-md5
-#        secret      WorthlessKeyForExample==
-#</key>
+#include "keys.conf"
 
 #<key>
 #        name        master-slave
@@ -207,20 +203,24 @@
 #
 # Access Control List definitions
 #
+# Meant to be used in access lists parameters (allow-*)
+# arbitrary-name comma-separated-list
+#
 
 #<acl>
 #        transferer  key master-slave
 #        admins      192.0.2.0/24, 2001:db8::74
 #        master      192.0.2.53
+#        controller  key abroad-admin-key
 #</acl>
 
 <acl>
-         localhost 127.0.0.0/8, ::1
+         controller 127.0.0.0/8, ::1
 </acl>
 
 #
 # Master domain zone config
-# 
+#
 
 <zone>
         type                    master
@@ -267,5 +267,231 @@
 #
 # The zone file, relative to 'datapath'.  (mandatory for a master)
 #        file        masters/somedomain.eu.zone
+#
+#        dnssec-policy           "normal-policy"
 #</zone>
 
+
+#
+# Policies
+#
+
+<dnssec-policy>
+
+    # name of the 'dnssec-policy'
+    id                      "normal-policy"
+
+    description             "Example of a policy with ZSK and KSK"
+
+    # denial nsec|"nsec3-parameters-section-name"
+    # can be the keyword 'nsec' or the 'id | name' of a 'denial' section
+    denial                  "nsec3-fixed"
+
+    # at least one: key-descriptor "name"
+    # they define KSK & ZSK keys
+
+    key-suite               "zsk-1024"
+    key-suite               "ksk-2048"
+
+</dnssec-policy>
+
+<key-suite>
+    # name of the key-suite
+    id                      "zsk-1024"
+    key-template            "zsk-rsa-sha256-1024"
+    # optional, without it, the keys found in the storage are used
+    key-roll                "monthly-diary"
+</key-suite>
+
+<key-suite>
+    # name of the key-suite
+    id                      "ksk-2048"
+    key-template            "ksk-rsa-sha256-2048"
+    # optional, without it, the keys found in the storage are used
+    key-roll                "yearly-diary"
+</key-suite>
+
+######################################################
+
+<key-template>
+    id                  "zsk-rsa-sha512-1024"
+    algorithm           RSASHA512
+    size                1024
+</key-template>
+
+<key-template>
+    id                  "zsk-rsa-sha512-2048"
+    algorithm           RSASHA512
+    size                2048
+</key-template>
+
+<key-template>
+    id                  "zsk-rsa-sha256-1024"
+    algorithm           RSASHA256
+    size                1024
+</key-template>
+
+<key-template>
+    id                  "zsk-rsa-sha256-2048"
+    algorithm           RSASHA256
+    size                2048
+</key-template>
+
+<key-template>
+    id                  "ksk-rsa-sha512-1024"
+    ksk                 1
+    algorithm           RSASHA512
+    size                1024
+</key-template>
+
+<key-template>
+    id                  "ksk-rsa-sha512-2048"
+    ksk                 1
+    algorithm           RSASHA512
+    size                2048
+</key-template>
+
+<key-template>
+    id                  "ksk-rsa-sha256-1024"
+    ksk                 1
+    algorithm           RSASHA256
+    size                1024
+</key-template>
+
+<key-template>
+    id                  "ksk-rsa-sha256-2048"
+    ksk                 1
+    algorithm           RSASHA256
+    size                2048
+</key-template>
+
+######################################################
+
+<denial>
+    type NSEC3
+    id            "nsec3-random"
+    salt-length   32
+    iterations    10
+    # can be 0 or 1, true or false, and on or off
+    optout        off
+</denial>
+
+<denial>
+    type NSEC3
+    id            "nsec3-fixed"
+    salt          "BA5EBA11"      # if nsec3-resalting is off 
+    iterations    5           # the number of additional times the hash function has been performe
+    # can be 0 or 1, true or false, and on or off
+    optout        off
+</denial>
+
+######################################################
+
+
+
+    #               minutes     hours       days               months         weekdays         weeks
+
+<key-roll>
+    id                 "yearly-diary"
+
+    generate            5          0           15                  6            *                 * # this year   (2016) 15/06 at 00:05
+    publish             10         0           15                  6            *                 * #                             00:10
+    activate            15         0           16                  6            *                 * #                    16/06 at 00:15
+    inactive            15         0           17                  6            *                 * #             (2017) 17/06 at 00:15
+    remove              15        11           18                  6            *                 * #             (2017) 18/06 at 11:15
+</key-roll>
+
+
+<key-roll>
+    id                 "monthly-diary"
+
+    generate            5          0           *                   *            tue               0 # 1 tuesday   of the month at 00:05
+    publish             10         0           *                   *            tue               0 #                             00:10
+    activate            15         0           *                   *            wed               0 # 1 wednesday of the month at 00:15
+    inactive            15         0           *                   *            thu               0 # 1 thursday  of the month at 00:15
+    remove              15        11           *                   *            fri               0 # 1 friday    of the month at 11:15
+</key-roll>
+
+<key-roll>
+    id                 "weekly-diary"
+
+    generate            25         0           *                   *            sun               * # every sunday of the month at 00:25
+    publish             30         0           *                   *            sun               * #                           at 00:30
+    activate            35         0           *                   *            sun               * #                           at 00:35
+    inactive            35         0           *                   *            sun               * #                           at 00:35
+    remove              35        11           *                   *            sun               * #                           at 11:35
+</key-roll>
+
+<key-roll>
+    id                 "daily-diary"
+
+    generate            5          0           *                   *            *               *   # at 00:05
+    publish             10         0           *                   *            *               *   # at 00:10
+    activate            15         0           *                   *            *               *   # at 00:15
+    inactive            15         0           *                   *            *               *   # at 00:15
+    remove              15        11           *                   *            *               *   # at 11:15
+</key-roll>
+
+<key-roll>
+    id                 "hourly-diary"
+
+    generate            1          *           *                   *            *                 *
+    publish             5          *           *                   *            *                 *
+    activate            10         *           *                   *            *                 *
+    inactive            15         *           *                   *            *                 *
+    remove              20         *           *                   *            *                 *
+</key-roll>
+
+<key-roll>
+    id                 "half-hourly-diary"
+
+    generate            0,30       *           *                   *            *                 *
+    publish             1,31       *           *                   *            *                 *
+    activate            2,32       *           *                   *            *                 *
+    inactive            34,04      *           *                   *            *                 *
+    remove              38,08      *           *                   *            *                 *
+</key-roll>
+
+<key-roll>
+    id                  "insane-diary"
+
+    generate   * * * * * *
+    publish    * * * * * *
+    activate   * * * * * *
+    inactive   * * * * * *
+    remove     * * * * * *
+</key-roll>
+
+<key-roll>
+    id                  "monthly-relative"
+
+    generate            +31d
+    publish             +60
+    activate            +120          
+    inactive            +33d # must be bigger than generate, to avoid a gap
+    remove              +1d
+</key-roll>
+
+<key-roll>
+    id                  "insane-relative"
+
+    generate            +60
+    publish             +0
+    activate            +0
+    inactive            +60
+    remove              +0
+</key-roll>
+
+<key-roll>
+    id                  "less-insane-relative"
+
+    generate            +120
+    publish             +0
+    activate            +0
+    inactive            +160
+    remove              +0
+</key-roll>
+
+
+
+######################################################
