--- a/lib/dnsdb/Makefile.in
+++ b/lib/dnsdb/Makefile.in
@@ -615,6 +615,7 @@ HAS_DNSQ = @HAS_DNSQ@
 HAS_DROPALL_SUPPORT = @HAS_DROPALL_SUPPORT@
 HAS_DYNCONF_SUPPORT = @HAS_DYNCONF_SUPPORT@
 HAS_DYNUPDATE_SUPPORT = @HAS_DYNUPDATE_SUPPORT@
+HAS_ECDSA_SUPPORT = @HAS_ECDSA_SUPPORT@
 HAS_EDF = @HAS_EDF@
 HAS_EXPERIMENTAL = @HAS_EXPERIMENTAL@
 HAS_FULL_ASCII7 = @HAS_FULL_ASCII7@
