--- a/debian/rules
+++ b/debian/rules
@@ -3,7 +3,7 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-DEB_BUILD_MAINT_OPTIONS = hardening=+all,-pie
+DEB_BUILD_MAINT_OPTIONS = hardening=+all
 DEB_CFLAGS_MAINT_APPEND = -Wall -Wextra
 DEB_CPPFLAGS_MAINT_APPEND = -DNDEBUG -g
 DPKG_EXPORT_BUILDFLAGS = 1
