--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: net
 Priority: optional
 Maintainer: Markus Schade <markus.schade@gmail.com>
 Build-Depends:
- debhelper,
+ debhelper (>= 10),
  libssl-dev
 Standards-Version: 4.1.3
 Homepage: http://www.yadifa.eu
