--- a/debian/control
+++ b/debian/control
@@ -1,14 +1,15 @@
 Source: yadifa
 Section: net
 Priority: optional
-Maintainer: Markus Schade <markus.schade@gmail.com>
+Maintainer: Debian DNS Packaging <pkg-dns-devel@lists.alioth.debian.org>
+Uploaders: Markus Schade <markus.schade@gmail.com>
 Build-Depends:
  debhelper (>= 11),
  libssl-dev
 Standards-Version: 4.1.3
 Homepage: http://www.yadifa.eu
-Vcs-Git: https://github.com/asciiprod/yadifa.git
-Vcs-Browser: https://github.com/asciiprod/yadifa.git
+Vcs-Git: https://salsa.debian.org/dns-team/yadifa.git
+Vcs-Browser: https://salsa.debian.org/dns-team/yadifa
 
 Package: yadifa
 Architecture: any
