--- a/debian/control
+++ b/debian/control
@@ -1,12 +1,11 @@
 Source: yadifa
 Section: net
 Priority: optional
-Maintainer: Debian DNS Packaging <pkg-dns-devel@lists.alioth.debian.org>
-Uploaders: Markus Schade <markus.schade@gmail.com>
+Maintainer: Markus Schade <markus.schade@gmail.com>
 Build-Depends:
  debhelper (>= 11),
  libssl-dev
-Standards-Version: 4.1.3
+Standards-Version: 4.1.4
 Homepage: http://www.yadifa.eu
 Vcs-Git: https://salsa.debian.org/dns-team/yadifa.git
 Vcs-Browser: https://salsa.debian.org/dns-team/yadifa
