--- a/debian/yadifa.service
+++ b/debian/yadifa.service
@@ -10,6 +10,19 @@ PIDFile=/run/yadifa/yadifad.pid
 ExecStart=/usr/sbin/yadifad -c $YADIFA_CONF
 ExecReload=/bin/kill -HUP $MAINPID
 KillMode=process
+CapabilityBoundingSet=CAP_CHOWN CAP_IPC_LOCK CAP_NET_BIND_SERVICE CAP_SETGID CAP_SETUID CAP_SYS_CHROOT
+MemoryDenyWriteExecute=true
+NoNewPrivileges=true
+PrivateDevices=true
+PrivateTmp=true
+ProtectHome=true
+ProtectControlGroups=true
+ProtectKernelModules=true
+ProtectKernelTunables=true
+ProtectSystem=strict
+ReadWritePaths=/var/lib/yadifa /run
+RuntimeDirectory=yadifa
+RestrictRealtime=true
 
 [Install]
 WantedBy=multi-user.target
